Fix overflow

--- a/src/Resources/public/framework/scss/styles/_tiny-slider.scss
+++ b/src/Resources/public/framework/scss/styles/_tiny-slider.scss
@@ -1,6 +1,7 @@
 .init-slider{
 
   > .inside{
+    overflow: hidden;
     margin: -#{divide($grid-gutter-width,2)};
 
     > .c_headline {
